tests/baselines/reference/parserES5ComputedPropertyName3.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName3.ts(1,11): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName3.ts(1,12): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName3.ts (2 errors) ====
    var v = { [e]() { } };
              ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
               ~
!!! error TS2304: Cannot find name 'e'.